<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.app.bale.CadastroParticipanteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/participante_explanation"
                android:id="@+id/input_participante_explanation" />

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_participante_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/participante_full_name" />
            </android.support.design.widget.TextInputLayout>

            <!--  Date of Birth Label -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participante_dob"
                    android:id="@+id/input_participante_dob"
                    android:paddingRight="30dp"
                    android:onClick="showDatePickerDialog"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/input_participante_dob2" />
            </LinearLayout>

            <!-- Gender Label -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participante_gender"
                    android:id="@+id/input_participante_gender"
                    android:layout_marginBottom="8dp"/>
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/radio_participante_gender">
                    <RadioButton android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_female"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onGenderRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_male"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onGenderRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_nonbinary"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_nonbinary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onGenderRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>

            <!-- Phone Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_participante_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/participante_phone" />
            </android.support.design.widget.TextInputLayout>

            <!-- Schooling Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_participante_schooling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/participante_schooling"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Handedness Label -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participante_handedness"
                    android:id="@+id/input_participante_handedness"
                    android:layout_marginBottom="8dp"/>
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/radio_participante_handedness">
                    <RadioButton android:id="@+id/radio_lefthanded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_lefthanded"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onHandednessRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_righthanded"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_righthanded"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onHandednessRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_ambidextrous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/participante_ambidextrous"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:onClick="onHandednessRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>

            <!-- Profession Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_participante_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/participante_profession"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Retired Label -->
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participante_retired"
                android:id="@+id/checkBox_participante_retired"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!-- Mother Tongue Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:id="@+id/dialogMotherTongue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participante_mother_tongue"
                    android:id="@+id/mother_tongue_label"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/mother_tongue_button"
                    android:textColor="#000"
                    android:text="@string/participante_mother_tongue_selection" />
            </LinearLayout>

            <!-- Other Idioms Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:id="@+id/dialogIdioms">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participante_idioms"
                    android:id="@+id/idioms_label"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/idioms_button"
                    android:textColor="#000"
                    android:text="@string/participante_idioms_selection" />
            </LinearLayout>

            <!-- Observation Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_participante_obs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/participante_obs"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Sign Up Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_participante_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/participante_register"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
